--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "waste-management-client-portal",
+  "name": "waste-management-portal",
   "private": true,
   "version": "0.0.0",
   "type": "module",
